Colour changes to correct contrast

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
 header {
-    background-color: #27a0cc;
-    color: #ffffff;
+    background-color: #39D7FE;
+    color: #000;
     border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -21,8 +21,8 @@ main ul {
     padding: 20px;
 }
 footer {
-    background-color: #27a0cc;
-    color: #ffffff;
+    background-color: #39D7FE;
+    color: #000;
     border-radius: 10px;
     max-width: 350px;
     padding: 20px;
@@ -30,5 +30,5 @@ footer {
     text-align: center;
 }
 #portal-last-modified {
-    color: #e5f01a;
+    color: #000;
 }
